# lemmafinder

./: .gitignore  .gitmodules  LICENSE  README.md  _CoqProject  dune-project  lfind.opam  setup.sh
app/: dune  g_lfind.mlg  lfind_main.ml
benchmark/: collect_stats.py  filter.py  get_solvability.py  get_stats.py  helper.py  plot_runtime.py  process_logs.py  process_output.py  run.py  run_folder.py
benchmark/bench_rev_append/: examples_rev_append.txt  rev_append.ml  rev_append.v
benchmark/clam/: goal14.v  goal33.v  goal50.v  lemmafinder_all_lemmas.txt  lemmafinder_bench.txt
benchmark/compiler/: Makefile.conf  _CoqProject  compiler_mono.ml  compiler_mono.mli  compiler_mono.v  compiler_mono_lfind_orig.ml  compiler_mono_lfind_orig.mli  compiler_mono_lfind_origs.ml  examples_compiler_mono.txt  lemmafinder_all_lemmas.txt  lemmafinder_bench.txt
benchmark/fulladder/: Makefile.conf  _CoqProject  fulladder.v  lemmafinder_all_lemmas.txt  lemmafinder_bench.txt
benchmark/le_plus_l/: _CoqProject  bench012.v  show_list.v
benchmark/lia/: Makefile.conf  _CoqProject  heap_insert.v  heap_insert_multi.v  heap_size.v  lemmafinder_all_lemmas.txt  lemmafinder_bench.txt  list_append_ass.v  list_append_len.v  list_append_nil.v  list_len.v  list_len_butlast.v  list_rev.v  list_rev2.v  list_rev2_append.v  list_rev2_len.v  list_rev_append.v  list_rev_len.v  list_rev_no_lemma.v  mult-int.v  mult.v  queue_amort.v  queue_len.v  queue_popback.v  queue_push.v  queue_push_to_list.v  tree_insert_all.v  tree_insert_size.v  tree_size.v
benchmark/logical_foundations/: IndProp.v  Induction.v  Lists.v  (+5 more)
old-lfind-code/: Abstract_NoDup.ml  CoqAPI_scratch.ml  CoqSynth.ml  EConstrUtils.ml  Evaluate.ml  ExampleUtils.ml  ExprUtils.ml  FileUtils.ml  Filter.ml  GenerateExamples.ml  ListUtils.ml  ProofContext.ml  Provable.ml  Quickcheck.ml  README.md  Synthesize.ml  TypeUtils.ml  Valid.ml
patch/: quickChick.mlg
src/: Abstract_NoDup.ml  Abstract_WPositions.ml  BlackBox.ml  Conjecture.ml  Consts.ml  CoqSynth.ml  CoqType.ml  CoqofOcaml.ml  EConstrUtils.ml  Evaluate.ml  ExampleGeneration.ml  ExampleManagement.ml  ExampleUtils.ml  Examples.ml  ExprUtils.ml  ExtractToML.ml  FileUtils.ml  Filter.ml  Generalization.ml  Generalize_NoDup.ml  Generalize_WPositions.ml  GenerateExamples.ml  GenerateMLFile.ml  Hypotheses.ml  LFContext.ml  LFCoq.ml  LFUtils.ml  Lattice.ml  LatticeUtils.ml  ListUtils.ml  Log.ml  LogProgress.ml  LogUtils.ml  Opts.ml  ProofContext.ml  Provable.ml  Proverbot.ml  Quickcheck.ml  Ranking.ml  Sexp.ml  (+13 more)
test/: Runner.ml  Test_Examples.ml  Test_Generalization.ml  Test_Setup.ml  Test_Synthesize.ml  dune
theories/: LFind.v  LFindLoad.v.in  dune
unit-tests/: ConjectureGenerationTest.ml  EndtoEnd.ml  GeneralizationTest.ml  README.md  Utests.ml  dune
(+43 files in other folders)
