synopsis:     "Coq Lemma Synthesizer"
description:  "Synthesizes Lemmas"
name:         "lfind"
opam-version: "2.0.7"
maintainer:   "dcssiva@cs.ucla.edu"
authors:      "Aishwarya Sivaraman"

depends: [
  "ocaml"          { >= "4.07.1"            }
  "coq"            { >= "8.11.0" & < "8.12" }
  "dune"           { >= "2.4.0"             }
  "coq-serapi"     { =  "8.11.0+0.11."      }
  "coq-quickchick" { =  "1.3.2"             }
]
substs: [ "theories/LFindLoad.v"]
build: [ "dune" "build" "-p" name "-j" jobs ]
